4.1/c078c62a752872fb83f56e41794dd61d5ea570a0
mmc: sh_mobile_sdhi: remove sh_mobile_sdhi_info v2

84f11d5b1f2abc0e22895b7e12e037f0ec03caeb
(mmc: sh_mobile_sdhi: remove sh_mobile_sdhi_info)
replaced sh_mobile_sdhi_info to tmio_mmc_data, but it was missing
to replace board-ape6evm / board-mackerel.
Kernel build will be failed without this patch.

	>> arch/arm/mach-shmobile/board-ape6evm.c:176:21: error: \
		variable 'sdhi0_pdata' has initializer but incomplete type
	static const struct sh_mobile_sdhi_info sdhi0_pdata __initconst = {
	                    ^
	>> arch/arm/mach-shmobile/board-ape6evm.c:177:2: error: \
		unknown field 'tmio_flags' specified in initializer
	.tmio_flags = TMIO_MMC_HAS_IDLE_WAIT | TMIO_MMC_WRPROTECT_DISABLE,
	^
	...

Signed-off-by: Kuninori Morimoto <kuninori.morimoto.gx@renesas.com>
Acked-by: Arnd Bergmann <arnd@arndb.de>
Acked-by: Simon Horman <horms+renesas@verge.net.au>
Signed-off-by: Vinod Koul <vinod.koul@intel.com>

